<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HelpActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignBottom="@+id/bottom_navigation">

        <ImageView
            android:id="@+id/lang_eng"
            android:layout_width="73dp"
            android:layout_height="50dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/eng_flag_pressed"
            app:layout_constraintEnd_toStartOf="@+id/lang_rus"
            app:layout_constraintTop_toTopOf="@+id/lang_rus" />

        <ImageView
            android:id="@+id/lang_rus"
            android:layout_width="73dp"
            android:layout_height="50dp"
            android:layout_marginTop="23dp"
            android:background="@drawable/rus_flag"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/lang_arm"
            android:layout_width="73dp"
            android:layout_height="50dp"
            android:layout_marginStart="40dp"
            android:background="@drawable/arm_flag"
            app:layout_constraintStart_toEndOf="@+id/lang_rus"
            app:layout_constraintTop_toTopOf="@+id/lang_rus" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="90dp"
            android:layout_marginBottom="65dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lang_eng">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/home_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/eng_home_title"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    app:layout_constraintEnd_toEndOf="@+id/home_content"
                    app:layout_constraintHorizontal_bias="0.02"
                    app:layout_constraintStart_toStartOf="@+id/home_content"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/home_content"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/eng_home_content"
                    android:textColor="@color/primary_gray_light"
                    android:textSize="17sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.491"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/home_title" />

                <TextView
                    android:id="@+id/qr_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/eng_qr_title"
                    android:textColor="@color/white"
                    android:textSize="28sp"

                    app:layout_constraintStart_toStartOf="@+id/home_title"
                    app:layout_constraintTop_toBottomOf="@id/home_content" />

                <TextView
                    android:id="@+id/qr_content"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/eng_qr_content"
                    android:textColor="@color/primary_gray_light"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="@+id/home_content"
                    app:layout_constraintTop_toBottomOf="@id/qr_title" />

                <TextView
                    android:id="@+id/settings_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/eng_settings_title"
                    android:textColor="@color/white"
                    android:textSize="28sp"
                    app:layout_constraintStart_toStartOf="@+id/qr_title"
                    app:layout_constraintTop_toBottomOf="@id/qr_content" />

                <TextView
                    android:id="@+id/settings_content"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/eng_settings_content"
                    android:textColor="@color/primary_gray_light"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="@+id/qr_content"
                    app:layout_constraintTop_toBottomOf="@id/settings_title" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bottom_navigation"
        app:itemBackground="@color/primary_gray_dark"
        app:itemTextColor="@drawable/menu_orange"
        app:itemIconTint="@drawable/menu_orange"
        app:menu="@menu/menu"
        android:layout_alignParentBottom="true"
        />
</RelativeLayout>