<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QR_Activity_Encrypt">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_decrypt"
            android:layout_width="180dp"
            android:layout_height="35dp"
            android:textOff="@string/switch_1"
            android:textOn="@string/switch_2"
            android:thumb="@drawable/thumb_1_orange"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.049"
            app:showText="true"
            app:track="@drawable/switch_track" />

        <ImageView
            android:id="@+id/help_btn"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="64dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/help_menu_icon"
            android:onClick="openPopUpWindow"
            app:layout_constraintBottom_toBottomOf="@+id/switch_decrypt"
            app:layout_constraintStart_toEndOf="@+id/switch_decrypt" />

        <EditText
            android:id="@+id/input_edittext"
            android:layout_width="345dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/input_text_xml"
            android:ems="10"
            android:hint="@string/write_here"
            android:inputType="textPersonName"
            android:paddingLeft="17dp"
            android:paddingRight="17dp"
            android:scrollbars="horizontal"
            android:text=""
            android:textColor="@color/white"
            android:textColorHint="@color/primary_gray_light"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/switch_decrypt" />


        <ImageView
            android:id="@+id/delete_btn"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginEnd="25dp"
            android:background="@drawable/delete_btn_orange"
            app:layout_constraintEnd_toStartOf="@+id/share_btn"
            app:layout_constraintTop_toTopOf="@+id/share_btn" />


        <ImageView
            android:id="@+id/share_btn"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/share_btn_orange"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_edittext" />

        <ImageView
            android:id="@+id/download_btn"
            android:layout_width="50dp"
            android:layout_height="48dp"
            android:layout_marginStart="24dp"
            android:background="@drawable/download_btn_orange"
            app:layout_constraintStart_toEndOf="@+id/share_btn"
            app:layout_constraintTop_toTopOf="@+id/share_btn" />

        <ImageView
            android:id="@+id/result"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/qr_stroke_orange"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/share_btn"
            app:srcCompat="@drawable/empty_image_icon" />

        <RadioGroup
            android:id="@+id/code_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="15dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toStartOf="@+id/two_txt"
            app:layout_constraintTop_toBottomOf="@+id/result">


            <RadioButton
                android:id="@+id/one_radio_btn"
                android:layout_width="30dp"
                android:layout_height="50dp"
                android:checked="false" />

            <RadioButton
                android:id="@+id/two_radio_btn"
                android:layout_width="30dp"
                android:layout_height="50dp"
                android:checked="false" />

            <RadioButton
                android:id="@+id/three_radio_btn"
                android:layout_width="30dp"
                android:layout_height="50dp"
                android:checked="false" />


        </RadioGroup>

        <TextView
            android:id="@+id/one_txt"
            android:layout_width="wrap_content"
            android:layout_height="29dp"
            android:layout_marginTop="10dp"
            android:text="@string/qr_code"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.513"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/code_radio_group" />

        <TextView
            android:id="@+id/two_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/aztec_code"
            android:textSize="23sp"
            app:layout_constraintStart_toStartOf="@+id/one_txt"
            app:layout_constraintTop_toBottomOf="@+id/one_txt" />

        <TextView
            android:id="@+id/three_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/code_128"
            android:textSize="23sp"
            app:layout_constraintStart_toStartOf="@+id/two_txt"
            app:layout_constraintTop_toBottomOf="@+id/two_txt" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bottom_navigation"
        app:itemBackground="@color/primary_gray_dark"
        app:itemTextColor="@drawable/menu_orange"
        app:itemIconTint="@drawable/menu_orange"
        app:menu="@menu/menu"
        android:layout_alignParentBottom="true"
        />
</RelativeLayout>