<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RSA_Encrypt">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_decrypt"
            android:layout_width="180dp"
            android:layout_height="35dp"
            android:textOff="@string/switch_1"
            android:textOn="@string/switch_2"
            android:checked="true"
            android:thumb="@drawable/thumb_1_orange"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.04"
            app:showText="true"
            app:track="@drawable/switch_track" />

        <ImageView
            android:id="@+id/help_btn"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/help_menu_icon"
            android:onClick="openPopUpWindow"
            app:layout_constraintBottom_toBottomOf="@+id/switch_decrypt"
            app:layout_constraintEnd_toEndOf="@+id/input_text" />

        <EditText
            android:id="@+id/input_text"
            android:layout_width="345dp"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/input_text_xml"
            android:ems="10"
            android:hint="@string/encrypted_text"
            android:inputType="textLongMessage"
            android:paddingLeft="17dp"
            android:paddingRight="17dp"
            android:scrollbars="horizontal"
            android:text=""
            android:textColor="@color/white"
            android:textColorHint="@color/primary_gray_light"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/switch_decrypt" />

        <ImageView
            android:id="@+id/delete_btn"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/delete_btn_orange"
            app:layout_constraintEnd_toStartOf="@+id/share_btn"
            app:layout_constraintTop_toTopOf="@+id/share_btn" />

        <ImageView
            android:id="@+id/share_btn"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/share_btn_orange"
            app:layout_constraintEnd_toEndOf="@+id/input_text"
            app:layout_constraintStart_toStartOf="@+id/input_text"
            app:layout_constraintTop_toBottomOf="@+id/input_text" />

        <ImageView
            android:id="@+id/copy_btn"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginStart="32dp"
            android:background="@drawable/copy_btn_orange"
            app:layout_constraintStart_toEndOf="@+id/share_btn"
            app:layout_constraintTop_toTopOf="@+id/share_btn" />

        <TextView
            android:id="@+id/result_textview"
            android:layout_width="350dp"
            android:layout_height="145dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/input_text_xml"
            android:hint="@string/see_here"
            android:paddingStart="15dp"
            android:paddingTop="12dp"
            android:paddingEnd="15dp"
            android:paddingBottom="10dp"
            android:scrollbars="vertical"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/share_btn" />





    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bottom_navigation"
        app:itemBackground="@color/primary_gray_dark"
        app:itemTextColor="@drawable/menu_orange"
        app:itemIconTint="@drawable/menu_orange"
        app:menu="@menu/menu"
        android:layout_alignParentBottom="true"
        />

</RelativeLayout>